# ValaVerbalExpressions

./: .gitignore  AUTHORS  LICENSE  README.md  Recipe  configure.ac  meson.build  meson_options.txt
po/: POTFILES.in
src/: Makefile.am  Recipe  libverbex-0.1.deps  libverbex-0.1.pc.in  libverbex.vala  meson.build
tests/: Recipe  add_modifier_test.vala  add_test.vala  end_of_line_test.vala  maybe_test.vala  meson.build  multiple_test.vala  or_test.vala  range_test.vala  remove_modifier_test.vala  sanitize_test.vala  something_but_test.vala  something_test.vala  start_of_line_test.vala  then_test.vala  verbex_test.vala  with_any_case.test.vala  with_any_case_test.vala
